<resources>
    <string name="app_name">HER\'S</string>
    <string name="welcome">Welcome to hers an application for women to support other women</string>
    <string name="Instruction">To login please enter your credetials below</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="reg">To register enter your details below</string>
    <string name="register">Register</string>
    <string name="acc_exists">Already have account? LogIn</string>
    <string name="logo">logo</string>
    <string name="phone">Enter your phone number</string>
    <string name="name">Enter your full name</string>
    <string name="description">Enter name and quantity of items you are requesting</string>
</resources>