<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/regInst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="5dp"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="@color/DarkSlateGray"
        android:textSize="17sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/nameTIL"
        android:layout_below="@+id/regInst"
        android:layout_marginTop="70dp">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--Edit input text Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/nameTIL">


        <EditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="text|phone"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/emailTIL"
        android:layout_below="@id/phoneTIL">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--Edit input text Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/emailTIL">


        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textColor="#BF360C" />


    <TextView
        android:id="@+id/haveAcc"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/registerBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:text="@string/acc_exists"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="245dp"
        android:layout_height="206dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="70dp"
        app:srcCompat="@drawable/logo_hers_black"
        android:contentDescription="@string/logo" />
</RelativeLayout>